# CFGManagerLib

./: .gitignore  CFGManagerLib.sln  CMakeLists.txt  README.md
CFGManagerLib/: CFGManager.cpp  CFGManager.h  CFGManagerLib.vcxproj  CFGManagerLib.vcxproj.filters  main.cpp
src/include/: CFGManager.h
src/sources/: CFGManager.cpp
tests/: CMakeLists.txt
tests/data/: 10_elements.txt  10_elements_named.txt
tests/src/: cmake_defined_data_directory.h  cmake_defined_data_directory.h.in  test.cpp
